[project]
name = "ev-behaviour-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]